@@ -110,6 +110,7 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                                                                    'macosx' => _("Mac OS X Mailserver"),
                                                                    'hmailserver' => _("hMailServer IMAP server"),
                                                                    'mercury32' => _("Mercury/32 IMAP server"),
+                                                                   'bincimap' => _("Binc IMAP server"),
                                                                    'other' => _("Not one of the above servers") ) ),
                  '$optional_delimiter' => array( 'name' => _("IMAP Folder Delimiter"),
                                                  'type' => SMOPT_TYPE_STRING,
